--- a/Fork_Forum/src/main/resources/templates/index.html
+++ b/Fork_Forum/src/main/resources/templates/index.html
@@ -2,15 +2,131 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Blddit</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.1.3/lux/bootstrap.min.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
+
+        body, button {
+            font-family: 'Noto Sans', sans-serif;
+        }
+
+        body {
+            font-size: 16px;
+            background-color: #333;
+            color: #fff;
+            background-image: url("/image/Fog.png");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: 50% -30%;
+        }
+
+        .header {
+            background-color: #9a9a9a;
+            color: #333;
+            text-align: center;
+            padding: 20px;
+        }
+
+        .header .right {
+            position: absolute;
+            right: 20px;
+            top: 20px;
+        }
+
+        .content {
+            text-align: center;
+            padding: 40px 20px;
+        }
+
+        .forum-group {
+            display: inline-block;
+            border: 1px solid #fff;
+            padding: 15px 30px;
+            margin-bottom: 20px;
+            background-color: #444;
+            border-radius: 15px;
+            margin: 20px;
+        }
+
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: #222;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            font-size: 12px;
+        }
+
+        .menu {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #333;
+            display: flex;
+            justify-content: center;
+        }
+
+        .menu li {
+            float: left;
+        }
+
+        .menu li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        .menu li a:hover {
+            background-color: #111;
+        }
+    </style>
 </head>
 <body>
-Home
-<br>
-<br>
-<button onclick="create()"> 글쓰기</button>
-<button onclick="paging()"> 목록</button>
-</body>
+<div class="header">
+    <img src="/image/blddit.png" alt="Logo" width="50" height="50">
+    <h1>Blddit</h1>
+    <div class="right">
+        <button class="btn btn-light" onclick="join()">Join</button>
+        <button class="btn btn-primary" onclick="signUp()">Sign Up</button>
+    </div>
+</div>
+
+<ul class="menu">
+    <li><a href="#games">Games</a></li>
+    <li><a href="#sports">Sports</a></li>
+    <li><a href="#develop">Develop</a></li>
+</ul>
+
+<div class="content">
+    <div class="forum-group">
+        <h3>Games</h3>
+        <button class="btn btn-light" onclick="create()">Write</button>
+        <button class="btn btn-light" onclick="paging()">List</button>
+    </div>
+    <div class="forum-group">
+        <h3>Sports</h3>
+        <button class="btn btn-light" onclick="create()">Write</button>
+        <button class="btn btn-light" onclick="paging()">List</button>
+    </div>
+    <div class="forum-group">
+        <h3>Develop</h3>
+        <button class="btn btn-light" onclick="create()">Write</button>
+        <button class="btn btn-light" onclick="paging()">List</button>
+    </div>
+</div>
+
+<div class="footer">
+    Busan, Korea<br>
+    Copyright © 2023 Hanol Song
+</div>
+
 <script>
     const create = () => {
         location.href = "/board/create";
@@ -19,5 +135,14 @@ Home
     const paging = () => {
         location.href = "/board/paging";
     }
+
+    const join = () => {
+        location.href = "/join";
+    }
+
+    const signUp = () => {
+        location.href = "/signup";
+    }
 </script>
+</body>
 </html>
