--- a/Fork_Forum/src/main/resources/templates/create.html
+++ b/Fork_Forum/src/main/resources/templates/create.html
@@ -3,13 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <title>save</title>
+    <!-- 부트스트랩 CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <!-- 부트스트랩 JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- 사용자 정의 스타일 -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
+        body, button {
+            font-family: 'Noto Sans', sans-serif;
+        }
+        body {
+            font-size: 16px;
+            background-color: #333;
+            color: #fff;
+        }
+        .header {
+            background-color: #9a9a9a;
+            color: #333;
+            text-align: center;
+            padding: 20px;
+        }
+        .content {
+            text-align: center;
+        }
+        .forum-group {
+            border: 1px solid #fff;
+            padding: 15px;
+            margin-bottom: 20px;
+            border-radius: 15px;
+        }
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: #222;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            font-size: 12px;
+        }
+    </style>
 </head>
 <body>
+<div class="header">
+    <h1>Save</h1>
+    <div class="right">
+        <button class="btn btn-light" onclick="join()">Join</button>
+        <button class="btn btn-primary" onclick="signUp()">Sign Up</button>
+    </div>
+</div>
+<div class="container content">
     <form action="/board/save" method="post" enctype="multipart/form-data">
-        title: <input type="text" name="title"> <br>
-        contents: <textarea name="contents" cols="30" rows="10"></textarea> <br>
-        file: <input type="file" name="files" multiple> <br>
-        <input type="submit" value="글작성">
+        <div class="form-group">
+            <label for="title">Title:</label>
+            <input type="text" class="form-control" id="title" name="title">
+        </div>
+        <div class="form-group">
+            <label for="contents">Contents:</label>
+            <textarea class="form-control" id="contents" name="contents" rows="3"></textarea>
+        </div>
+        <div class="form-group">
+            <label for="files">File:</label>
+            <input type="file" class="form-control-file" id="files" name="files" multiple>
+        </div>
+        <button type="submit" class="btn btn-primary">글작성</button>
     </form>
+</div>
+<div class="footer">
+    Busan, Korea<br>
+    Copyright © 2023 Hanol Song
+</div>
+<script>
+    const join = () => {
+        location.href = "/join";
+    }
+    const signUp = () => {
+        location.href = "/signup";
+    }
+</script>
 </body>
 </html>
