--- a/Fork_Forum/src/main/resources/templates/paging.html
+++ b/Fork_Forum/src/main/resources/templates/paging.html
@@ -46,6 +46,9 @@
             padding: 10px;
             font-size: 12px;
         }
+        .table {
+            color: #fff;
+        }
     </style>
 </head>
 <body>
